# faultpick

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  cli.py  config.py
src/clustering/: __init__.py  outliers.py
src/geometry/: __init__.py  coordinates.py  hull.py  pca.py
src/io/: __init__.py  export.py  loading.py
src/moment_tensor/: __init__.py  analysis.py
src/plotting/: __init__.py
tests/: test_synthetic_clusters.py
